Created page with "Existuje mnoho nástrojů, které vyžadují výběr tvarů nebo objektů. V takových případech bude panel úkolů čekat, až uživatel vybere příslušné objekty ze [[Tree_View|stromového zobrazení]] nebo [[3D_View|3D zobrazení]]. Když je otevřený panel úkolů, je možné přepnout do [[Tree_View|stromového zobrazení]] a vybrat objekt. Poté je možné se vrátit zpět do panelu úkolů a pokračovat v práci s nástrojem. Panel úkolů se obvykle zavír..."

--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Pannello delle Azioni (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel zada&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="Painel de tarefas (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Task_Panel.html" class="mw-pt-progress mw-pt-progress--med" title="&#1055;&#1072;&#1085;&#1077;&#1083;&#1100; &#1079;&#1072;&#1076;&#1072;&#1095; (17% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="&#20219;&#21153;&#38754;&#26495; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ko/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="&#51089;&#50629; &#54056;&#45328;(Task panel) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -22,7 +22,7 @@
 </p>
 <h2><span id="Pr.C3.A1ce_s_panelem_.C3.BAkol.C5.AF"></span><span class="mw-headline" id="Pr&aacute;ce_s_panelem_&uacute;kol&#367;">Pr&aacute;ce s panelem &uacute;kol&#367;</span></h2>
 <p>Panel &uacute;kol&#367; se obvykle otev&#345;e, kdy&#382; je aktivov&aacute;n n&aacute;stroj, kter&yacute; vy&#382;aduje zad&aacute;n&iacute; &uacute;daj&#367; u&#382;ivatelem. Pokud n&aacute;stroj nevy&#382;aduje vstup u&#382;ivatele, vygeneruje v&yacute;sledek nebo se ukon&#269;&iacute;, ale nezobraz&iacute; panel &uacute;kol&#367;. U&#382;ivatelsk&yacute; vstup m&#367;&#382;e b&yacute;t cokoli, nap&#345;&iacute;klad text, sou&#345;adnice 3D bod&#367;, prvky ze seznamu, plochy z tvaru nebo mo&#382;nosti &uacute;pravy zp&#367;sobu fungov&aacute;n&iacute; n&aacute;stroje.
-</p><p>There are many tools that require the selection of shapes or objects. In such cases the Task Panel will wait for the user to select the appropriate objects from the <a href="../Tree_View.html" title="Tree View">Tree View</a> or the <a href="../3D_View.html" title="3D View">3D View</a>. When a Task Panel is open, it is possible to switch to the <a href="../Tree_View.html" title="Tree View">Tree View</a> to choose an object. Once this is done, it is possible to switch back to the Task Panel to proceed with the tool. The Task Panel is usually closed by clicking an <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> or a <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> button, or pressing the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> key to abort the tool.
+</p><p>Existuje mnoho n&aacute;stroj&#367;, kter&eacute; vy&#382;aduj&iacute; v&yacute;b&#283;r tvar&#367; nebo objekt&#367;. V takov&yacute;ch p&#345;&iacute;padech bude panel &uacute;kol&#367; &#269;ekat, a&#382; u&#382;ivatel vybere p&#345;&iacute;slu&scaron;n&eacute; objekty ze <a href="../Tree_View.html" title="Tree View">stromov&eacute;ho zobrazen&iacute;</a> nebo <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a>. Kdy&#382; je otev&#345;en&yacute; panel &uacute;kol&#367;, je mo&#382;n&eacute; p&#345;epnout do <a href="../Tree_View.html" title="Tree View">stromov&eacute;ho zobrazen&iacute;</a> a vybrat objekt. Pot&eacute; je mo&#382;n&eacute; se vr&aacute;tit zp&#283;t do panelu &uacute;kol&#367; a pokra&#269;ovat v pr&aacute;ci s n&aacute;strojem. Panel &uacute;kol&#367; se obvykle zav&iacute;r&aacute; kliknut&iacute;m na tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> nebo <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span> nebo stisknut&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, &#269;&iacute;m&#382; se n&aacute;stroj ukon&#269;&iacute;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel_ArchComponent.png&amp;filetimestamp=20190928004925&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel_ArchComponent.png" decoding="async" width="250" height="333" class="mw-file-element" data-file-width="424" data-file-height="565"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Task Panel that opens when editing an <a href="../Arch_Component.html" title="Arch Component">Arch Component</a>. The Panel waits for the user to select objects that can be added or subtracted from the component.</p>
@@ -90,34 +90,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122171537
+Cached time: 20260122171819
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.173 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.201 seconds
 Preprocessor visited node count: 402/1000000
-Post&#8208;expand include size: 32599/2097152 bytes
-Template argument size: 11910/2097152 bytes
+Post&#8208;expand include size: 32602/2097152 bytes
+Template argument size: 11913/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2119/5000000 bytes
+Unstrip post&#8208;expand size: 2120/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.527      1 -total
- 33.28%   12.490      1 Template:Std_Base_navi/cs
- 31.48%   11.814      3 Template:Navigation_menu_2
- 22.85%    8.576      1 Template:Userdocnavi/cs
- 20.73%    7.780      1 Template:Interface_navi/cs
-  5.75%    2.158      2 Template:Caption
-  5.67%    2.127      1 Template:TOCright
-  4.24%    1.592      2 Template:Button
-  4.20%    1.577      3 Template:KEY
+100.00%   57.261      1 -total
+ 38.82%   22.230      1 Template:Std_Base_navi/cs
+ 35.86%   20.533      3 Template:Navigation_menu_2
+ 20.64%   11.817      1 Template:Userdocnavi/cs
+ 19.77%   11.323      1 Template:Interface_navi/cs
+  5.30%    3.037      2 Template:Caption
+  4.65%    2.661      1 Template:TOCright
+  3.98%    2.277      3 Template:KEY
+  3.52%    2.015      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171536 and revision id 1742527. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171819 and revision id 1742529. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
