--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -25,7 +25,7 @@
 </p><p>Existuje mnoho n&aacute;stroj&#367;, kter&eacute; vy&#382;aduj&iacute; v&yacute;b&#283;r tvar&#367; nebo objekt&#367;. V takov&yacute;ch p&#345;&iacute;padech bude panel &uacute;kol&#367; &#269;ekat, a&#382; u&#382;ivatel vybere p&#345;&iacute;slu&scaron;n&eacute; objekty ze <a href="../Tree_View.html" title="Tree View">stromov&eacute;ho zobrazen&iacute;</a> nebo <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a>. Kdy&#382; je otev&#345;en&yacute; panel &uacute;kol&#367;, je mo&#382;n&eacute; p&#345;epnout do <a href="../Tree_View.html" title="Tree View">stromov&eacute;ho zobrazen&iacute;</a> a vybrat objekt. Pot&eacute; je mo&#382;n&eacute; se vr&aacute;tit zp&#283;t do panelu &uacute;kol&#367; a pokra&#269;ovat v pr&aacute;ci s n&aacute;strojem. Panel &uacute;kol&#367; se obvykle zav&iacute;r&aacute; kliknut&iacute;m na tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> nebo <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span> nebo stisknut&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, &#269;&iacute;m&#382; se n&aacute;stroj ukon&#269;&iacute;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel_ArchComponent.png&amp;filetimestamp=20190928004925&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel_ArchComponent.png" decoding="async" width="250" height="333" class="mw-file-element" data-file-width="424" data-file-height="565"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Task Panel that opens when editing an <a href="../Arch_Component.html" title="Arch Component">Arch Component</a>. The Panel waits for the user to select objects that can be added or subtracted from the component.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Panel &uacute;kol&#367;, kter&yacute; se otev&#345;e p&#345;i &uacute;prav&aacute;ch <a href="../Arch_Component.html" title="Arch Component">Arch komponenty</a>. Panel &#269;ek&aacute;, a&#382; u&#382;ivatel vybere objekty, kter&eacute; lze p&#345;idat nebo odebrat z komponenty.</p>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
 <ul><li>Users migrating from other CAD solutions that use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> key as part of their workflow may get different results in FreeCAD. When <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> is pressed in FreeCAD the Task Panel that has the focus will close. To disable this functionality, please see <a href="../Fine-tuning.html#Escape_key" title="Fine-tuning">Fine tuning</a> and <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">Sketcher Preferences</a>.</li></ul>
 <p><br>
@@ -90,15 +90,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122171819
+Cached time: 20260122171944
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.201 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.158 seconds
 Preprocessor visited node count: 402/1000000
-Post&#8208;expand include size: 32602/2097152 bytes
-Template argument size: 11913/2097152 bytes
+Post&#8208;expand include size: 32608/2097152 bytes
+Template argument size: 11916/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -106,18 +106,18 @@ Unstrip post&#8208;expand size: 2120/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.261      1 -total
- 38.82%   22.230      1 Template:Std_Base_navi/cs
- 35.86%   20.533      3 Template:Navigation_menu_2
- 20.64%   11.817      1 Template:Userdocnavi/cs
- 19.77%   11.323      1 Template:Interface_navi/cs
-  5.30%    3.037      2 Template:Caption
-  4.65%    2.661      1 Template:TOCright
-  3.98%    2.277      3 Template:KEY
-  3.52%    2.015      2 Template:Button
+100.00%   30.775      1 -total
+ 35.33%   10.874      1 Template:Std_Base_navi/cs
+ 29.10%    8.955      3 Template:Navigation_menu_2
+ 24.44%    7.522      1 Template:Interface_navi/cs
+ 14.00%    4.309      1 Template:Userdocnavi/cs
+  6.42%    1.977      2 Template:Caption
+  5.72%    1.760      2 Template:Button
+  5.72%    1.759      1 Template:TOCright
+  5.58%    1.716      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171819 and revision id 1742529. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171944 and revision id 1742532. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
