--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -26,7 +26,9 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel_ArchComponent.png&amp;filetimestamp=20190928004925&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel_ArchComponent.png" decoding="async" width="250" height="333" class="mw-file-element" data-file-width="424" data-file-height="565"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Panel &uacute;kol&#367;, kter&yacute; se otev&#345;e p&#345;i &uacute;prav&aacute;ch <a href="../Arch_Component.html" title="Arch Component">Arch komponenty</a>. Panel &#269;ek&aacute;, a&#382; u&#382;ivatel vybere objekty, kter&eacute; lze p&#345;idat nebo odebrat z komponenty.</p>
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<p><span id="Notes"></span>
+</p>
+<h2><span id="Pozn.C3.A1mky"></span><span class="mw-headline" id="Pozn&aacute;mky">Pozn&aacute;mky</span></h2>
 <ul><li>Users migrating from other CAD solutions that use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> key as part of their workflow may get different results in FreeCAD. When <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> is pressed in FreeCAD the Task Panel that has the focus will close. To disable this functionality, please see <a href="../Fine-tuning.html#Escape_key" title="Fine-tuning">Fine tuning</a> and <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">Sketcher Preferences</a>.</li></ul>
 <p><br>
 </p>
@@ -90,13 +92,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122171944
+Cached time: 20260122171952
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.158 seconds
-Preprocessor visited node count: 402/1000000
+CPU time usage: 0.077 seconds
+Real time usage: 0.100 seconds
+Preprocessor visited node count: 403/1000000
 Post&#8208;expand include size: 32608/2097152 bytes
 Template argument size: 11916/2097152 bytes
 Highest expansion depth: 5/100
@@ -106,18 +108,18 @@ Unstrip post&#8208;expand size: 2120/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.775      1 -total
- 35.33%   10.874      1 Template:Std_Base_navi/cs
- 29.10%    8.955      3 Template:Navigation_menu_2
- 24.44%    7.522      1 Template:Interface_navi/cs
- 14.00%    4.309      1 Template:Userdocnavi/cs
-  6.42%    1.977      2 Template:Caption
-  5.72%    1.760      2 Template:Button
-  5.72%    1.759      1 Template:TOCright
-  5.58%    1.716      3 Template:KEY
+100.00%   21.810      1 -total
+ 35.91%    7.833      1 Template:Std_Base_navi/cs
+ 29.51%    6.436      3 Template:Navigation_menu_2
+ 21.32%    4.650      1 Template:Interface_navi/cs
+ 17.46%    3.808      1 Template:Userdocnavi/cs
+  6.52%    1.423      2 Template:Caption
+  5.82%    1.270      1 Template:TOCright
+  5.12%    1.118      3 Template:KEY
+  4.85%    1.057      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171944 and revision id 1742532. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171952 and revision id 1742534. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
