--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Pannello delle Azioni (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel zada&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="Painel de tarefas (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Task_Panel.html" class="mw-pt-progress mw-pt-progress--med" title="&#1055;&#1072;&#1085;&#1077;&#1083;&#1100; &#1079;&#1072;&#1076;&#1072;&#1095; (17% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="&#20219;&#21153;&#38754;&#26495; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ko/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="&#51089;&#50629; &#54056;&#45328;(Task panel) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -29,7 +29,7 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span id="Pozn.C3.A1mky"></span><span class="mw-headline" id="Pozn&aacute;mky">Pozn&aacute;mky</span></h2>
-<ul><li>Users migrating from other CAD solutions that use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> key as part of their workflow may get different results in FreeCAD. When <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> is pressed in FreeCAD the Task Panel that has the focus will close. To disable this functionality, please see <a href="../Fine-tuning.html#Escape_key" title="Fine-tuning">Fine tuning</a> and <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">Sketcher Preferences</a>.</li></ul>
+<ul><li>U&#382;ivatel&eacute; p&#345;ech&aacute;zej&iacute;c&iacute; z jin&yacute;ch CAD &#345;e&scaron;en&iacute;, kter&aacute; pou&#382;&iacute;vaj&iacute; kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> jako sou&#269;&aacute;st sv&eacute;ho pracovn&iacute;ho postupu, mohou ve FreeCADu dos&aacute;hnout odli&scaron;n&yacute;ch v&yacute;sledk&#367;. Kdy&#382; ve FreeCADu stisknete kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span>, zav&#345;e se panel &uacute;kol&#367;, kter&yacute; m&aacute; fokus. Chcete-li tuto funkci deaktivovat, pod&iacute;vejte se na <a href="../Fine-tuning.html#Escape_key" title="Fine-tuning">Jemn&eacute; dolad&#283;n&iacute;</a> a <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">P&#345;edvolby Sketcheru</a>..</li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -92,34 +92,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122171952
+Cached time: 20260122172108
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.077 seconds
-Real time usage: 0.100 seconds
+Real time usage: 0.110 seconds
 Preprocessor visited node count: 403/1000000
 Post&#8208;expand include size: 32608/2097152 bytes
 Template argument size: 11916/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2120/5000000 bytes
+Unstrip post&#8208;expand size: 2124/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.810      1 -total
- 35.91%    7.833      1 Template:Std_Base_navi/cs
- 29.51%    6.436      3 Template:Navigation_menu_2
- 21.32%    4.650      1 Template:Interface_navi/cs
- 17.46%    3.808      1 Template:Userdocnavi/cs
-  6.52%    1.423      2 Template:Caption
-  5.82%    1.270      1 Template:TOCright
-  5.12%    1.118      3 Template:KEY
-  4.85%    1.057      2 Template:Button
+100.00%   20.398      1 -total
+ 34.95%    7.130      1 Template:Std_Base_navi/cs
+ 30.60%    6.241      3 Template:Navigation_menu_2
+ 20.07%    4.094      1 Template:Interface_navi/cs
+ 16.70%    3.406      1 Template:Userdocnavi/cs
+  7.27%    1.483      2 Template:Caption
+  6.80%    1.387      1 Template:TOCright
+  6.76%    1.379      2 Template:Button
+  4.42%    0.902      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171952 and revision id 1742534. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122172108 and revision id 1742536. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
