--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -6,11 +6,13 @@
 <li><a href="../it/Combo_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Vista combinata (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Combo_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok po&#322;&#261;czony (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Combo_View.html" class="mw-pt-progress mw-pt-progress--high" title="Visualiza&ccedil;&atilde;o combinada (90% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Combo_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1050;&#1086;&#1084;&#1073;&#1080;&#1085;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1085;&#1099;&#1081; &#1074;&#1080;&#1076; (&#1050;&#1086;&#1084;&#1073;&#1086; &#1074;&#1080;&#1076;) (90% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Combo_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#12467;&#12531;&#12508;&#12499;&#12517;&#12540; (10% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>The <a href="../Combo_View.html" title="Combo View">Combo View</a> appears in a panel called <b>Model</b>. It combines the <a href="../Tree_View.html" title="Tree View">Tree View</a> (upper section) and the <a href="../Property_View.html" title="Property View">Property View</a> (lower section).
 </p><p>The <a href="../Task_Panel.html" title="Task Panel">Task Panel</a>, which used to be part of the Combo View, is a separate panel called <b>Tasks</b> in <span style="font-size:small;color:green;">1.0 and above</span>. It can be <a href="#Dock_Task_Panel_on_top_of_Combo_View">docked</a> on top of the Combo View to achieve the compact layout of earlier versions.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Combo_View_Example.png&amp;filetimestamp=20240717084115&amp;.html" class="mw-file-description"><img src="../File/Combo_View_Example.png" decoding="async" width="277" height="368" class="mw-file-element" data-file-width="277" data-file-height="368"></a></span>
@@ -88,13 +90,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122174011
+Cached time: 20260122174018
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.158 seconds
-Preprocessor visited node count: 387/1000000
+CPU time usage: 0.083 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 388/1000000
 Post&#8208;expand include size: 30135/2097152 bytes
 Template argument size: 11756/2097152 bytes
 Highest expansion depth: 5/100
@@ -104,19 +106,19 @@ Unstrip post&#8208;expand size: 1966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.613      1 -total
- 36.68%   15.631      1 Template:Std_Base_navi/cs
- 27.65%   11.782      3 Template:Navigation_menu_2
- 17.27%    7.361      1 Template:Interface_navi/cs
- 12.63%    5.381      1 Template:Userdocnavi/cs
-  9.43%    4.017      2 Template:Value
-  7.52%    3.203      1 Template:TOCright
-  7.02%    2.990      1 Template:VersionPlus
-  4.66%    1.985      1 Template:Caption
-  3.84%    1.636      2 Template:Incode
+100.00%   31.551      1 -total
+ 35.15%   11.090      1 Template:Std_Base_navi/cs
+ 30.28%    9.553      3 Template:Navigation_menu_2
+ 21.62%    6.821      1 Template:Userdocnavi/cs
+ 17.60%    5.554      1 Template:Interface_navi/cs
+  7.23%    2.281      2 Template:Value
+  5.06%    1.595      1 Template:Caption
+  4.12%    1.301      1 Template:VersionPlus
+  3.58%    1.128      2 Template:Incode
+  3.51%    1.106      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174010 and revision id 1742538. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174018 and revision id 1742540. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
