--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -13,7 +13,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p><a href="../Combo_View.html" title="Combo View">Kombinovan&eacute; zobrazen&iacute;</a> se zobraz&iacute; na panelu s n&aacute;zvem <b>Model</b>. It combines the <a href="../Tree_View.html" title="Tree View">Tree View</a> (upper section) and the <a href="../Property_View.html" title="Property View">Property View</a> (lower section).
+<p><a href="../Combo_View.html" title="Combo View">Kombinovan&eacute; zobrazen&iacute;</a> se zobraz&iacute; na panelu s n&aacute;zvem <b>Model</b>. Kombinuje <a href="../Tree_View.html" title="Tree View">Stromov&eacute; zobrazen&iacute;</a> (horn&iacute; &#269;&aacute;st) a <a href="../Property_View.html" title="Property View">Zobrazen&iacute; vlastnost&iacute;</a> (doln&iacute; &#269;&aacute;st).
 </p><p>The <a href="../Task_Panel.html" title="Task Panel">Task Panel</a>, which used to be part of the Combo View, is a separate panel called <b>Tasks</b> in <span style="font-size:small;color:green;">1.0 and above</span>. It can be <a href="#Dock_Task_Panel_on_top_of_Combo_View">docked</a> on top of the Combo View to achieve the compact layout of earlier versions.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Combo_View_Example.png&amp;filetimestamp=20240717084115&amp;.html" class="mw-file-description"><img src="../File/Combo_View_Example.png" decoding="async" width="277" height="368" class="mw-file-element" data-file-width="277" data-file-height="368"></a></span>
 </p>
@@ -90,12 +90,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122174200
+Cached time: 20260122174303
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.109 seconds
 Preprocessor visited node count: 388/1000000
 Post&#8208;expand include size: 30135/2097152 bytes
 Template argument size: 11756/2097152 bytes
@@ -106,19 +106,19 @@ Unstrip post&#8208;expand size: 1966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.100      1 -total
- 29.19%   10.538      1 Template:Userdocnavi/cs
- 24.18%    8.729      1 Template:Std_Base_navi/cs
- 20.00%    7.219      3 Template:Navigation_menu_2
- 13.15%    4.749      1 Template:Interface_navi/cs
- 10.34%    3.732      1 Template:VersionPlus
-  6.83%    2.465      2 Template:Value
-  6.32%    2.280      1 Template:TOCright
-  4.34%    1.565      1 Template:Caption
-  3.69%    1.332      1 Template:MenuCommand
+100.00%   26.176      1 -total
+ 29.78%    7.794      3 Template:Navigation_menu_2
+ 26.73%    6.997      1 Template:Std_Base_navi/cs
+ 22.01%    5.762      1 Template:Userdocnavi/cs
+ 17.95%    4.699      1 Template:Interface_navi/cs
+  9.52%    2.492      2 Template:Value
+  6.56%    1.718      1 Template:TOCright
+  5.41%    1.415      1 Template:Caption
+  5.04%    1.320      1 Template:VersionPlus
+  4.94%    1.292      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174159 and revision id 1742542. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174303 and revision id 1742544. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
