--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -17,7 +17,7 @@
 </p><p>Panel &uacute;kol&#367; <a href="../Task_Panel.html" title="Task Panel">Task Panel</a>, kter&yacute; byl d&#345;&iacute;ve sou&#269;&aacute;st&iacute; kombinovan&eacute;ho zobrazen&iacute;, je ve <span style="font-size:small;color:green;">1.0 and above</span> samostatn&yacute;m panelem s n&aacute;zvem <b>Tvorba</b>. Lze ho <a href="#Dock_Task_Panel_on_top_of_Combo_View">ukotvit</a> nad zobrazen&iacute;m Kombinovan&eacute; zobrazen&iacute;, aby se dos&aacute;hlo kompaktn&iacute;ho rozlo&#382;en&iacute; jako v p&#345;edchoz&iacute;ch verz&iacute;ch.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Combo_View_Example.png&amp;filetimestamp=20240717084115&amp;.html" class="mw-file-description"><img src="../File/Combo_View_Example.png" decoding="async" width="277" height="368" class="mw-file-element" data-file-width="277" data-file-height="368"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Combo View (Model tab) with docked Task Panel (Tasks tab)</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Kombinovan&yacute; pohled (karta Model) s ukotven&yacute;m panelem &uacute;kol&#367; (karta Tvorba)</p>
 <h2><span class="mw-headline" id="Dock_Task_Panel_on_top_of_Combo_View">Dock Task Panel on top of Combo View</span></h2>
 <ol><li>Make sure the Combo View is docked along an edge of the FreeCAD window.</li>
 <li>Move the cursor to the very top of the Task Panel.</li>
@@ -90,15 +90,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122174550
+Cached time: 20260122174741
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.145 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.109 seconds
 Preprocessor visited node count: 388/1000000
-Post&#8208;expand include size: 30135/2097152 bytes
-Template argument size: 11756/2097152 bytes
+Post&#8208;expand include size: 30167/2097152 bytes
+Template argument size: 11772/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -106,19 +106,19 @@ Unstrip post&#8208;expand size: 1966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.047      1 -total
- 28.81%    9.234      1 Template:Std_Base_navi/cs
- 23.43%    7.510      3 Template:Navigation_menu_2
- 21.36%    6.845      1 Template:Interface_navi/cs
- 14.74%    4.724      1 Template:Userdocnavi/cs
-  8.67%    2.779      2 Template:Value
-  8.05%    2.580      1 Template:Caption
-  6.23%    1.998      1 Template:TOCright
-  5.69%    1.824      1 Template:VersionPlus
-  4.88%    1.563      2 Template:Incode
+100.00%   30.896      1 -total
+ 32.99%   10.193      1 Template:Std_Base_navi/cs
+ 23.65%    7.306      3 Template:Navigation_menu_2
+ 21.35%    6.595      1 Template:Interface_navi/cs
+ 11.44%    3.535      1 Template:Userdocnavi/cs
+ 11.20%    3.460      2 Template:Value
+  5.72%    1.768      1 Template:Caption
+  5.54%    1.713      1 Template:TOCright
+  5.16%    1.593      2 Template:Incode
+  4.63%    1.430      1 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174550 and revision id 1742546. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174740 and revision id 1742548. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
