Created page with "# Ujistěte se, že je kombinovaný pohled ukotven podél okraje okna FreeCADu. # Přesuňte kurzor na samý vrchol panelu úkolů. # Šipka se změní v ruku. # Hold down the left mouse button and drag the Task Panel on top of the Combo View. # Move vertically until both the upper and lower sections of the Combo View are highlighted.<br>[[File:Tasks_Dockable.png|200px]] # Release the mouse button."

--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Combo_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Vista combinata (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Combo_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok po&#322;&#261;czony (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Combo_View.html" class="mw-pt-progress mw-pt-progress--high" title="Visualiza&ccedil;&atilde;o combinada (90% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Combo_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1050;&#1086;&#1084;&#1073;&#1080;&#1085;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1085;&#1099;&#1081; &#1074;&#1080;&#1076; (&#1050;&#1086;&#1084;&#1073;&#1086; &#1074;&#1080;&#1076;) (90% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Combo_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#12467;&#12531;&#12508;&#12499;&#12517;&#12540; (10% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -21,9 +21,9 @@
 <p><span id="Dock_Task_Panel_on_top_of_Combo_View"></span>
 </p>
 <h2><span id="Panel_.C3.BAkol.C5.AF_dokovan.C3.BD_v_horn.C3.AD_.C4.8D.C3.A1sti_kombinovan.C3.A9ho_zobrazen.C3.AD"></span><span class="mw-headline" id="Panel_&uacute;kol&#367;_dokovan&yacute;_v_horn&iacute;_&#269;&aacute;sti_kombinovan&eacute;ho_zobrazen&iacute;">Panel &uacute;kol&#367; dokovan&yacute; v horn&iacute; &#269;&aacute;sti kombinovan&eacute;ho zobrazen&iacute;</span></h2>
-<ol><li>Make sure the Combo View is docked along an edge of the FreeCAD window.</li>
-<li>Move the cursor to the very top of the Task Panel.</li>
-<li>The arrow becomes a hand.</li>
+<ol><li>Ujist&#283;te se, &#382;e je kombinovan&yacute; pohled ukotven pod&eacute;l okraje okna FreeCADu.</li>
+<li>P&#345;esu&#328;te kurzor na sam&yacute; vrchol panelu &uacute;kol&#367;.</li>
+<li>&Scaron;ipka se zm&#283;n&iacute; v ruku.</li>
 <li>Hold down the left mouse button and drag the Task Panel on top of the Combo View.</li>
 <li>Move vertically until both the upper and lower sections of the Combo View are highlighted.<br><span typeof="mw:File"><a href="../index.php?title=Tasks_Dockable.png&amp;filetimestamp=20240717171217&amp;.html" class="mw-file-description"><img src="../File/Tasks_Dockable.png" decoding="async" width="200" height="236" class="mw-file-element" data-file-width="338" data-file-height="398"></a></span></li>
 <li>Release the mouse button.</li></ol>
@@ -92,35 +92,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122174826
+Cached time: 20260122175018
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.103 seconds
+Real time usage: 0.155 seconds
 Preprocessor visited node count: 389/1000000
 Post&#8208;expand include size: 30167/2097152 bytes
 Template argument size: 11772/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1966/5000000 bytes
+Unstrip post&#8208;expand size: 1967/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.734      1 -total
- 27.39%   11.703      1 Template:Interface_navi/cs
- 27.38%   11.699      3 Template:Navigation_menu_2
- 21.76%    9.300      1 Template:Std_Base_navi/cs
- 19.15%    8.185      2 Template:Value
- 15.22%    6.504      1 Template:Userdocnavi/cs
- 13.32%    5.692      2 Template:Incode
-  4.61%    1.968      1 Template:MenuCommand
-  3.27%    1.398      1 Template:TOCright
-  3.18%    1.361      1 Template:Caption
+100.00%   38.043      1 -total
+ 30.25%   11.508      1 Template:Std_Base_navi/cs
+ 23.86%    9.078      3 Template:Navigation_menu_2
+ 16.99%    6.463      1 Template:Interface_navi/cs
+ 16.40%    6.239      1 Template:Userdocnavi/cs
+ 11.46%    4.358      2 Template:Value
+  6.69%    2.544      1 Template:VersionPlus
+  5.98%    2.275      1 Template:MenuCommand
+  5.91%    2.248      1 Template:Caption
+  4.73%    1.799      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174826 and revision id 1742550. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122175018 and revision id 1742552. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
