--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -30,7 +30,7 @@
 <p><span id="Preferences"></span>
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
-<p>See also: <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
+<p>Viz tak&eacute;: <a href="../Preferences_Editor.html" title="Preferences Editor">Editor p&#345;edvoleb</a>.
 </p><p>The Combo View is available if <b>Edit &rarr; Preferences &rarr; General &rarr; General &rarr; Tree View and Property View mode</b> is set to <code>Combined</code>. If it is set to <code>Independent</code> the Tree View and the Property View appear as separate panels.
 </p><p><br>
 </p>
@@ -94,12 +94,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122175158
+Cached time: 20260122175236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.109 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 390/1000000
 Post&#8208;expand include size: 30167/2097152 bytes
 Template argument size: 11772/2097152 bytes
@@ -110,19 +110,19 @@ Unstrip post&#8208;expand size: 1967/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.172      1 -total
- 26.91%    8.659      1 Template:Std_Base_navi/cs
- 21.53%    6.926      3 Template:Navigation_menu_2
- 20.65%    6.645      1 Template:Userdocnavi/cs
- 19.39%    6.237      1 Template:Interface_navi/cs
-  9.86%    3.171      2 Template:Value
-  6.52%    2.099      1 Template:Caption
-  5.77%    1.856      1 Template:TOCright
-  5.73%    1.845      1 Template:VersionPlus
-  3.48%    1.120      2 Template:Incode
+100.00%   30.266      1 -total
+ 27.66%    8.370      1 Template:Std_Base_navi/cs
+ 23.04%    6.974      3 Template:Navigation_menu_2
+ 21.11%    6.388      1 Template:Interface_navi/cs
+ 17.13%    5.186      1 Template:Userdocnavi/cs
+ 10.95%    3.314      2 Template:Value
+  5.87%    1.777      2 Template:Incode
+  5.59%    1.691      1 Template:Caption
+  5.18%    1.568      1 Template:TOCright
+  5.04%    1.525      1 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122175158 and revision id 1742556. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122175236 and revision id 1742558. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
