Created page with "== Úvod =="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -13,7 +13,9 @@
 <li><a href="../ja/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#12484;&#12522;&#12540;&#12499;&#12517;&#12540; (94% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Tree_View.html" class="mw-pt-progress mw-pt-progress--med" title="&#45208;&#47924; &#48372;&#44592;(Tree view) (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>The <a href="../Tree_View.html" title="Tree View">Tree View</a> appears in the upper section of the <b>Model</b> panel (if the <a href="../Combo_View.html" title="Combo View">Combo View</a> is active) or as a stand-alone panel. It shows all user defined objects that are part of a FreeCAD document. The Tree View is a representation of the <a href="../Document_structure.html" title="Document structure">document's structure</a>, and indicates what information is saved to disk.
 </p><p>These objects don't necessarily have to be geometrical shapes visible in the <a href="../3D_View.html" title="3D View">3D View</a>, but can also be supporting data objects created with any of the <a href="../Workbenches.html" title="Workbenches">workbenches</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
@@ -152,13 +154,13 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122180923
+Cached time: 20260122180931
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.183 seconds
-Preprocessor visited node count: 748/1000000
+CPU time usage: 0.136 seconds
+Real time usage: 0.569 seconds
+Preprocessor visited node count: 749/1000000
 Post&#8208;expand include size: 37917/2097152 bytes
 Template argument size: 12152/2097152 bytes
 Highest expansion depth: 7/100
@@ -168,19 +170,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.769      1 -total
- 22.00%    8.971      1 Template:Std_Base_navi/cs
- 19.48%    7.940      1 Template:Interface_navi/cs
- 17.78%    7.247      3 Template:Navigation_menu_2
- 12.31%    5.019      1 Template:Userdocnavi/cs
-  8.18%    3.334      2 Template:PropertyData
-  7.42%    3.023      1 Template:PropertyView
-  5.57%    2.269      1 Template:FALSE
-  5.21%    2.124      3 Template:Variable
-  4.61%    1.881      1 Template:TOCright
+100.00%  226.009      1 -total
+ 28.97%   65.478      1 Template:Std_Base_navi/cs
+ 19.39%   43.818      3 Template:Navigation_menu_2
+ 15.02%   33.946      2 Template:PropertyData
+  9.05%   20.452      1 Template:Userdocnavi/cs
+  8.84%   19.984      1 Template:PropertyView
+  8.52%   19.253      1 Template:FALSE
+  8.20%   18.531      3 Template:Variable
+  7.77%   17.551      1 Template:Interface_navi/cs
+  4.70%   10.620      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122180922 and revision id 1742563. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122180930 and revision id 1742565. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
