Created page with "Mnoho operací vytváří objekty, které jsou závislé na již existujícím objektu. V tomto případě stromová struktura zobrazuje tento vztah tak, že starší objekt je absorbován do nového objektu. Rozbalením a sbalením objektů ve stromovém pohledu se zobrazí parametrická historie daného objektu. Objekty, které jsou hlouběji uvnitř jiných, jsou starší, zatímco objekty, které jsou vně, jsou novější a jsou odvozeny od starších objektů. Úpr..."

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -25,7 +25,7 @@
 </p>
 <h2><span id="Pr.C3.A1ce_se_stromov.C3.BDm_zobrazen.C3.ADm"></span><span class="mw-headline" id="Pr&aacute;ce_se_stromov&yacute;m_zobrazen&iacute;m">Pr&aacute;ce se stromov&yacute;m zobrazen&iacute;m</span></h2>
 <p>Ve v&yacute;choz&iacute;m nastaven&iacute; se ka&#382;d&yacute; nov&yacute; objekt po vytvo&#345;en&iacute; p&#345;id&aacute; na konec seznamu v zobrazen&iacute; stromov&eacute; struktury. Zobrazen&iacute; stromu umo&#382;&#328;uje spravovat objekty tak, aby byly p&#345;ehledn&#283; uspo&#345;&aacute;d&aacute;ny; umo&#382;&#328;uje vytv&aacute;&#345;et <a href="../Std_Group.html" title="Std Group">skupiny</a>, p&#345;esouvat objekty uvnit&#345; skupin, p&#345;esouvat skupiny uvnit&#345; jin&yacute;ch skupin, p&#345;ejmenov&aacute;vat objekty, kop&iacute;rovat objekty, mazat objekty a pou&#382;&iacute;vat polo&#382;ky z jeho <a href="#Context_menu">kontextov&eacute;ho menu</a>.
-</p><p>Many operations create objects that are dependent on a previously existing object. In this case, the Tree View shows this relationship by absorbing the older object inside the new object. Expanding and collapsing the objects in the Tree View shows the parametric history of that object. Objects that are deeper inside others are older, while objects that are outside are newer, and are derived from the older objects. By modifying the interior objects, the parametric operations propagate all the way to the top, generating a new result.
+</p><p>Mnoho operac&iacute; vytv&aacute;&#345;&iacute; objekty, kter&eacute; jsou z&aacute;visl&eacute; na ji&#382; existuj&iacute;c&iacute;m objektu. V tomto p&#345;&iacute;pad&#283; stromov&aacute; struktura zobrazuje tento vztah tak, &#382;e star&scaron;&iacute; objekt je absorbov&aacute;n do nov&eacute;ho objektu. Rozbalen&iacute;m a sbalen&iacute;m objekt&#367; ve stromov&eacute;m pohledu se zobraz&iacute; parametrick&aacute; historie dan&eacute;ho objektu. Objekty, kter&eacute; jsou hloub&#283;ji uvnit&#345; jin&yacute;ch, jsou star&scaron;&iacute;, zat&iacute;mco objekty, kter&eacute; jsou vn&#283;, jsou nov&#283;j&scaron;&iacute; a jsou odvozeny od star&scaron;&iacute;ch objekt&#367;. &Uacute;pravou vnit&#345;n&iacute;ch objekt&#367; se parametrick&eacute; operace &scaron;&iacute;&#345;&iacute; a&#382; nahoru a generuj&iacute; nov&yacute; v&yacute;sledek.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The topmost object is created by doing parametric operations on objects which themselves were created by previous operations.<br>
@@ -156,12 +156,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122183459
+Cached time: 20260122184024
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.135 seconds
-Real time usage: 0.193 seconds
+CPU time usage: 0.116 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 750/1000000
 Post&#8208;expand include size: 37927/2097152 bytes
 Template argument size: 12157/2097152 bytes
@@ -172,19 +172,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.709      1 -total
- 22.07%    9.868      1 Template:Interface_navi/cs
- 21.54%    9.631      1 Template:Std_Base_navi/cs
- 17.17%    7.676      3 Template:Navigation_menu_2
- 12.44%    5.562      1 Template:Userdocnavi/cs
-  8.66%    3.870      2 Template:PropertyData
-  6.16%    2.754      1 Template:FALSE
-  5.00%    2.237      1 Template:PropertyView
-  4.81%    2.151      3 Template:Variable
-  4.46%    1.995     19 Template:KEY
+100.00%   42.278      1 -total
+ 20.92%    8.844      1 Template:Std_Base_navi/cs
+ 16.70%    7.062      3 Template:Navigation_menu_2
+ 15.90%    6.722      1 Template:Interface_navi/cs
+ 10.90%    4.608      1 Template:Userdocnavi/cs
+ 10.42%    4.407      2 Template:PropertyData
+  8.24%    3.485      1 Template:FALSE
+  6.74%    2.849      3 Template:Variable
+  6.33%    2.677      1 Template:PropertyView
+  5.62%    2.374      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122183459 and revision id 1742584. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184024 and revision id 1742586. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
