Created page with "{{Caption|Nejvyšší objekt je vytvořen pomocí parametrických operací na objektech, které byly samy vytvořeny předchozími operacemi.<br> Úplné rozbalení stromu odhalí původní prvky, které byly použity k vytvoření jednotlivých částí těles.}}"

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -28,8 +28,8 @@
 </p><p>Mnoho operac&iacute; vytv&aacute;&#345;&iacute; objekty, kter&eacute; jsou z&aacute;visl&eacute; na ji&#382; existuj&iacute;c&iacute;m objektu. V tomto p&#345;&iacute;pad&#283; stromov&aacute; struktura zobrazuje tento vztah tak, &#382;e star&scaron;&iacute; objekt je absorbov&aacute;n do nov&eacute;ho objektu. Rozbalen&iacute;m a sbalen&iacute;m objekt&#367; ve stromov&eacute;m pohledu se zobraz&iacute; parametrick&aacute; historie dan&eacute;ho objektu. Objekty, kter&eacute; jsou hloub&#283;ji uvnit&#345; jin&yacute;ch, jsou star&scaron;&iacute;, zat&iacute;mco objekty, kter&eacute; jsou vn&#283;, jsou nov&#283;j&scaron;&iacute; a jsou odvozeny od star&scaron;&iacute;ch objekt&#367;. &Uacute;pravou vnit&#345;n&iacute;ch objekt&#367; se parametrick&eacute; operace &scaron;&iacute;&#345;&iacute; a&#382; nahoru a generuj&iacute; nov&yacute; v&yacute;sledek.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The topmost object is created by doing parametric operations on objects which themselves were created by previous operations.<br>
-Fully expanding the tree reveals the original elements that were used to create the partial solids.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Nejvy&scaron;&scaron;&iacute; objekt je vytvo&#345;en pomoc&iacute; parametrick&yacute;ch operac&iacute; na objektech, kter&eacute; byly samy vytvo&#345;eny p&#345;edchoz&iacute;mi operacemi.<br>
+&Uacute;pln&eacute; rozbalen&iacute; stromu odhal&iacute; p&#367;vodn&iacute; prvky, kter&eacute; byly pou&#382;ity k vytvo&#345;en&iacute; jednotliv&yacute;ch &#269;&aacute;st&iacute; t&#283;les.</p>
 <h3><span class="mw-headline" id="Tree_View_columns">Tree View columns</span></h3>
 <p>The Tree View always displays a column with the icons and labels of objects. Two additional columns can optionally be displayed as well. To enable these columns right-click the Tree View and in the context menu select <b>Tree Settings</b> and then <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) and/or <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Column headings are added if more than one column is displayed. Note that the internal names of objects cannot be changed.
 </p>
@@ -156,15 +156,15 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122184024
+Cached time: 20260122184202
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.173 seconds
+CPU time usage: 0.147 seconds
+Real time usage: 0.587 seconds
 Preprocessor visited node count: 750/1000000
-Post&#8208;expand include size: 37927/2097152 bytes
-Template argument size: 12157/2097152 bytes
+Post&#8208;expand include size: 37973/2097152 bytes
+Template argument size: 12180/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -172,19 +172,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.278      1 -total
- 20.92%    8.844      1 Template:Std_Base_navi/cs
- 16.70%    7.062      3 Template:Navigation_menu_2
- 15.90%    6.722      1 Template:Interface_navi/cs
- 10.90%    4.608      1 Template:Userdocnavi/cs
- 10.42%    4.407      2 Template:PropertyData
-  8.24%    3.485      1 Template:FALSE
-  6.74%    2.849      3 Template:Variable
-  6.33%    2.677      1 Template:PropertyView
-  5.62%    2.374      2 Template:Caption
+100.00%  149.511      1 -total
+ 23.70%   35.438      1 Template:Std_Base_navi/cs
+ 18.12%   27.093      3 Template:Navigation_menu_2
+ 14.57%   21.777      1 Template:Interface_navi/cs
+ 10.63%   15.898      1 Template:Userdocnavi/cs
+  9.52%   14.234      1 Template:PropertyView
+  9.45%   14.124      2 Template:PropertyData
+  6.34%    9.485      6 Template:MenuCommand
+  6.32%    9.443      1 Template:TOCright
+  4.93%    7.372      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184024 and revision id 1742586. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184201 and revision id 1742588. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
