Created page with "=== Sloupce stromového zobrazení ==="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -30,7 +30,9 @@
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Nejvy&scaron;&scaron;&iacute; objekt je vytvo&#345;en pomoc&iacute; parametrick&yacute;ch operac&iacute; na objektech, kter&eacute; byly samy vytvo&#345;eny p&#345;edchoz&iacute;mi operacemi.<br>
 &Uacute;pln&eacute; rozbalen&iacute; stromu odhal&iacute; p&#367;vodn&iacute; prvky, kter&eacute; byly pou&#382;ity k vytvo&#345;en&iacute; jednotliv&yacute;ch &#269;&aacute;st&iacute; t&#283;les.</p>
-<h3><span class="mw-headline" id="Tree_View_columns">Tree View columns</span></h3>
+<p><span id="Tree_View_columns"></span>
+</p>
+<h3><span id="Sloupce_stromov.C3.A9ho_zobrazen.C3.AD"></span><span class="mw-headline" id="Sloupce_stromov&eacute;ho_zobrazen&iacute;">Sloupce stromov&eacute;ho zobrazen&iacute;</span></h3>
 <p>The Tree View always displays a column with the icons and labels of objects. Two additional columns can optionally be displayed as well. To enable these columns right-click the Tree View and in the context menu select <b>Tree Settings</b> and then <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) and/or <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Column headings are added if more than one column is displayed. Note that the internal names of objects cannot be changed.
 </p>
 <h3><span class="mw-headline" id="Edit_object_label">Edit object label</span></h3>
@@ -156,13 +158,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122184202
+Cached time: 20260122184230
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.587 seconds
-Preprocessor visited node count: 750/1000000
+CPU time usage: 0.125 seconds
+Real time usage: 0.190 seconds
+Preprocessor visited node count: 751/1000000
 Post&#8208;expand include size: 37973/2097152 bytes
 Template argument size: 12180/2097152 bytes
 Highest expansion depth: 7/100
@@ -172,19 +174,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  149.511      1 -total
- 23.70%   35.438      1 Template:Std_Base_navi/cs
- 18.12%   27.093      3 Template:Navigation_menu_2
- 14.57%   21.777      1 Template:Interface_navi/cs
- 10.63%   15.898      1 Template:Userdocnavi/cs
-  9.52%   14.234      1 Template:PropertyView
-  9.45%   14.124      2 Template:PropertyData
-  6.34%    9.485      6 Template:MenuCommand
-  6.32%    9.443      1 Template:TOCright
-  4.93%    7.372      1 Template:FALSE
+100.00%   54.691      1 -total
+ 23.95%   13.101      1 Template:Interface_navi/cs
+ 18.90%   10.336      1 Template:Userdocnavi/cs
+ 17.14%    9.376      3 Template:Navigation_menu_2
+ 16.87%    9.226      1 Template:Std_Base_navi/cs
+ 11.16%    6.105      1 Template:FALSE
+  5.76%    3.151      2 Template:PropertyData
+  3.82%    2.090      1 Template:PropertyView
+  3.61%    1.974     19 Template:KEY
+  3.36%    1.838      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184201 and revision id 1742588. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184230 and revision id 1742590. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
