Created page with "== Překryvné ikony =="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -64,7 +64,9 @@
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Vpravo</span>: rozbal&iacute; vybran&eacute; polo&#382;ky.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Nahoru</span>: rozbal&iacute; vybran&eacute; polo&#382;ky se v&scaron;emi jejich pod&#345;&iacute;zen&yacute;mi sbalen&yacute;mi polo&#382;kami &uacute;rovn&#283; 1 (hlub&scaron;&iacute; pod&#345;&iacute;zen&eacute; polo&#382;ky z&#367;stanou beze zm&#283;ny).</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Dol&#367;</span>: rozbal&iacute; vybran&eacute; polo&#382;ky a v&scaron;echny jejich pod&#345;&iacute;zen&eacute; polo&#382;ky &uacute;rovn&#283; 1 (hlub&scaron;&iacute; pod&#345;&iacute;zen&eacute; polo&#382;ky z&#367;stanou beze zm&#283;ny).</li></ul></li></ul>
-<h2><span class="mw-headline" id="Overlay_icons">Overlay icons</span></h2>
+<p><span id="Overlay_icons"></span>
+</p>
+<h2><span id="P.C5.99ekryvn.C3.A9_ikony"></span><span class="mw-headline" id="P&#345;ekryvn&eacute;_ikony">P&#345;ekryvn&eacute; ikony</span></h2>
 <p>One or more overlay icons can be displayed on top of an object's default icon in the Tree View. The available overlay icons and their meaning are listed below.
 </p>
 <h3><span class="mw-headline" id="White_check_mark_on_blue_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White check mark on blue background</span></h3>
@@ -164,13 +166,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122192329
+Cached time: 20260122192440
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.644 seconds
-Preprocessor visited node count: 756/1000000
+CPU time usage: 0.153 seconds
+Real time usage: 0.422 seconds
+Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
 Highest expansion depth: 7/100
@@ -180,19 +182,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  143.545      1 -total
- 33.11%   47.525      1 Template:Std_Base_navi/cs
- 28.60%   41.049      3 Template:Navigation_menu_2
- 17.97%   25.800      1 Template:Interface_navi/cs
- 11.47%   16.468      1 Template:Userdocnavi/cs
- 10.68%   15.329      2 Template:PropertyData
-  9.65%   13.853      3 Template:Variable
-  9.08%   13.038      1 Template:PropertyView
-  6.80%    9.761      2 Template:Caption
-  3.35%    4.805      1 Template:FALSE
+100.00%  114.597      1 -total
+ 34.04%   39.008      3 Template:Navigation_menu_2
+ 28.62%   32.796      1 Template:Std_Base_navi/cs
+ 25.31%   29.008      1 Template:Interface_navi/cs
+ 12.60%   14.440      1 Template:PropertyView
+ 11.09%   12.705      1 Template:Userdocnavi/cs
+  3.55%    4.070      2 Template:PropertyData
+  3.15%    3.614      2 Template:Caption
+  2.92%    3.344      1 Template:FALSE
+  2.60%    2.981      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122192327 and revision id 1742612. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122192439 and revision id 1742614. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
